Add login component

--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -1,3 +1,20 @@
 .login {
-  width: 100%;
+  width: 33.33%;
+
+  .sign-on-button {
+    position: relative;
+    left: 33.33%;
+    margin-top: 4px;
+    background: #263a91;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    padding: 4px 8px;
+    width: 33.33%;
+    color: rgb(255, 255, 255, 0.9);
+    text-align: center;
+    font-weight: 500;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
