--- a/src/components/Dashboard/index.scss
+++ b/src/components/Dashboard/index.scss
@@ -13,6 +13,9 @@
       align-items: center;
       > svg {
         margin-right: 4px;
+        &:hover {
+          cursor: pointer;
+        }
       }
       > div {
         font-size: 14px;
@@ -28,7 +31,7 @@
         width: 2px;
         height: 24px;
         line-height: 24px;
-        background: #eee;
+        background: rgba(0, 0, 0, 0.3);
         margin: 0 1rem;
       }
     }
