--- a/src/components/TextField/index.scss
+++ b/src/components/TextField/index.scss
@@ -11,6 +11,12 @@
     input {
       width: 100%;
     }
+
+    svg {
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .caption {
